--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 }
 .title_text {
     color: white;
-    font-family: kh baphnom limon s1;
+    font-family: KhmerTitle;
     font-size: 35px;
 }
 .sliding_menu {
