--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 }
 .title_bar {
     background-color: #EA7B5F;
-    box-shadow: 0px 3px 0.6px #694238(128, 128, 128, 0.478);
+    box-shadow: 0px 5px  #694238(128, 128, 128, 0.478);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,7 +44,6 @@
 }
 .title_text {
     color: white;
-    font-family: KhmerTitle;
     font-size: 35px;
 }
 .sliding_menu {
@@ -232,4 +231,30 @@
   .pdf-iframe {
     width: 100%;
     height: 100%;
+  }
+  /* Footer */
+  footer {
+    background-color: #BD3819;
+    padding: 20px;
+    color: white;
+    box-shadow: 0px -6px rgba(237, 117, 117, 0.389);
+  }
+  
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .column {
+    flex-basis: 100%;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+  }
+  
+  @media only screen and (min-width: 600px) {
+    .column {
+      flex-basis: calc(50% - 10px);
+      margin-bottom: 0;
+    }
   }
